--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,22 @@ body {
     text-wrap: balance;
   }
 }
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: #192126;
+  margin-top: 2px;
+  margin-right: 2px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #8b8f92;
+  border-radius: 4px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background-color: #5e6468;
+}
